# ASR-Fun-nano-cpu-pip

./: .gitignore  README_NANO.md  download_model.py  inference.py  pyproject.toml  requirements.txt  setup_env.bat  setup_env.sh
asr_nano/: __init__.py  engine.py  server.py  voiceprint.py
tests/: test_integration.py
